apps/canfar/base/science-portal/custom-scienceportal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: science-portal-ingress
  namespace: skaha-system
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: canfar.ral.uksrc.org
    http:
      paths:
      - path: /science-portal
        pathType: Prefix
        backend:
          service:
            name: science-portal-tomcat-svc
            port:
              number: 8080
